Updates people, projects, and papers.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,3 +24,6 @@ nav:
     - title: PDS
       link: /projects/pds
       page_id: pds
+    - title: CDAE
+      link: /projects/cdae
+      page_id: cdae
