--- a/_data/research.yml
+++ b/_data/research.yml
@@ -32,6 +32,7 @@ megaattitude:
 
 supermereo:
   papers:
+  - cao_cause_2025
   - cao_generating_2024
   - gantt_decomposing_2022
 
@@ -42,10 +43,13 @@ lofi:
 pds:
   papers:
   - grove_probabilistic_2024
-  - grove_factivity_2024
-  - grove_modeling_2024
+  - grove_factivity_2025
+  - grove_modeling_2025
 
-cdae: null
+cdae:
+  papers:
+  - walden_cross-document_2025
+  - vashishtha_famus_2024
 ellipsis: null
 connotate: null
 zulu: null
