--- a/_data/research.yml
+++ b/_data/research.yml
@@ -49,6 +49,7 @@ pds:
 cdae:
   papers:
   - walden_cross-document_2025
+  - gantt_event_2024
   - vashishtha_famus_2024
 ellipsis: null
 connotate: null
